[tool.poetry]
name = "pobbin"
version = "0.1.0"
description = "pastebin alternative for the path of building community fork"
authors = ["FWidm <3480240+FWidm@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "7.1.2"
fastapi = "0.61.1"
h11 = "0.11.0"
lxml = ">=4.6.2"
psycopg2-binary = "2.8.6"
pydantic = "1.6.1"
SQLAlchemy = "1.3.20"
starlette = "0.13.6"
uvicorn = "0.12.1"
hashids = "1.3.1"
requests = "2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
